--- a/public/index.html
+++ b/public/index.html
@@ -1,89 +1,150 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
-
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/11.1.0/firebase-app-compat.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/11.1.0/firebase-auth-compat.js"></script>
-    <script defer src="/__/firebase/11.1.0/firebase-database-compat.js"></script>
-    <script defer src="/__/firebase/11.1.0/firebase-firestore-compat.js"></script>
-    <script defer src="/__/firebase/11.1.0/firebase-functions-compat.js"></script>
-    <script defer src="/__/firebase/11.1.0/firebase-messaging-compat.js"></script>
-    <script defer src="/__/firebase/11.1.0/firebase-storage-compat.js"></script>
-    <script defer src="/__/firebase/11.1.0/firebase-analytics-compat.js"></script>
-    <script defer src="/__/firebase/11.1.0/firebase-remote-config-compat.js"></script>
-    <script defer src="/__/firebase/11.1.0/firebase-performance-compat.js"></script>
-    <!-- 
-      initialize the SDK after all desired features are loaded, set useEmulator to false
-      to avoid connecting the SDK to running emulators.
-    -->
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
-
-    <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
-      @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
-      }
-    </style>
+    <title>Firebase Test UI</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
   </head>
   <body>
-    <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
+    <div class="container mt-5">
+      <div id="auth-container" class="row">
+        <div class="col-md-6 offset-md-3">
+          <h2 class="text-center mb-4">Firebase Authentication</h2>
+          <div id="login-form" class="form-group">
+            <input
+              type="email"
+              class="form-control"
+              id="email"
+              placeholder="Email"
+            />
+            <input
+              type="password"
+              class="form-control"
+              id="password"
+              placeholder="Password"
+            />
+            <button id="login-button" class="btn btn-primary mt-2">
+              Login
+            </button>
+            <button id="google-signIn-button" class="btn btn-danger mt-2">
+              Sign In with Google
+            </button>
+            <button id="phone-signIn-button" class="btn btn-warning mt-2">
+              Sign In with Phone
+            </button>
+          </div>
+          <div
+            id="phone-auth-section"
+            style="display: none"
+            class="form-group mt-3"
+          >
+            <input
+              type="text"
+              class="form-control"
+              id="phone-number"
+              placeholder="Enter Phone Number"
+            />
+            <div id="recaptcha-container" class="mt-2"></div>
+            <button id="send-otp-button" class="btn btn-primary mt-2">
+              Send OTP
+            </button>
+            <div id="otp-section" style="display: none">
+              <input
+                type="text"
+                class="form-control mt-2"
+                id="otp-code"
+                placeholder="Enter OTP"
+              />
+              <button id="verify-otp-button" class="btn btn-success mt-2">
+                Verify OTP
+              </button>
+            </div>
+          </div>
+          <div id="signUp-EmailandPass" class="form-group">
+            <button id="signup-toggle" class="btn btn-secondary mt-2">
+              Don't have an account? Sign Up
+            </button>
+            <button
+              id="login-toggle"
+              class="btn btn-secondary mt-2"
+              style="display: none"
+            >
+              Already have an account? Login
+            </button>
+          </div>
+          <div id="signup-form" class="form-group" style="display: none">
+            <input
+              type="text"
+              class="form-control"
+              id="signup-name"
+              placeholder="Name"
+            />
+            <input
+              type="email"
+              class="form-control"
+              id="signup-email"
+              placeholder="Email"
+            />
+            <input
+              type="password"
+              class="form-control"
+              id="signup-password"
+              placeholder="Password"
+            />
+            <button id="signup-button" class="btn btn-secondary mt-2">
+              Sign Up
+            </button>
+          </div>
+          <div id="user-info" class="mt-3" style="display: none">
+            <p>Logged in as: <span id="user-email"></span></p>
+            <button id="logout-button" class="btn btn-danger mt-2">
+              Logout
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col-md-6 offset-md-3">
+          <div
+            id="firestore-container"
+            style="display: none"
+            class="form-group"
+          >
+            <h2 class="text-center mb-4">Channel Management</h2>
+            <label for="channel-name">Channel Name</label>
+            <input
+              type="text"
+              class="form-control"
+              id="channel-name"
+              placeholder="Channel Name"
+            />
+            <label for="channel-description">Channel Description</label>
+            <input
+              type="text"
+              class="form-control"
+              id="channel-description"
+              placeholder="Channel Description"
+            />
+            <button id="add-data-button" class="btn btn-success mt-2">
+              Add Data
+            </button>
+          </div>
+          <div id="channel-list" class="form-group" style="display: none">
+            <h2 class="text-center mb-4">Channel List</h2>
+          </div>
+          <div id="data-list">
+            <ul class="list-group"></ul>
+          </div>
+        </div>
+      </div>
     </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
-
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        const loadEl = document.querySelector('#load');
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.firestore().doc('/foo/bar').get().then(() => { });
-        // firebase.functions().httpsCallable('yourFunction')().then(() => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        // firebase.analytics(); // call to activate
-        // firebase.analytics().logEvent('tutorial_completed');
-        // firebase.performance(); // call to activate
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-
-        try {
-          let app = firebase.app();
-          let features = [
-            'auth', 
-            'database', 
-            'firestore',
-            'functions',
-            'messaging', 
-            'storage', 
-            'analytics', 
-            'remoteConfig',
-            'performance',
-          ].filter(feature => typeof app[feature] === 'function');
-          loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
-        }
-      });
-    </script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-messaging.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
